# AdventOfCode

./: .gitignore
12/: solve.py
14/: solve.py
2020/1/: solve.py
2020/10/: solve.py
2020/11/: solve.py
2020/13/: solve.py
2020/15/: solve.py
2020/16/: solve.py
2020/2/: solve.py
2020/3/: solve.py
2020/4/: solve.py
2020/5/: solve.py
2020/6/: solve.py
2020/7/: solve.py
2020/8/: solve.py
2020/9/: solve.py
2021/1/: solve.py
2021/2/: solve.py
2021/AOC/: AOC.fsproj  One.fs  Program.fs  Three.fs  Two.fs
2021/python/10/: solve.py
2021/python/11/: solve.py
2021/python/12/: solve.py
2021/python/2/: solve.py
2021/python/3/: solve.py
2021/python/4/: solve.ipynb  solve.py
2021/python/5/: solve.py
2021/python/6/: solve.py
2021/python/7/: solve.py
2021/python/8/: solve.py
2021/python/9/: solve.py
2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
rust2022/: Cargo.toml
rust2022/src/: day1.rs  day10.rs  day1_2021.rs  day2.rs  day2_2021.rs  day3.rs  day3_2021.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
