[package]
name = "rust2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cargo-aoc = "0.3.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
futures = "0.3.25"
itertools = "0.10.5"